--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^3.2.0",
-    "react-router-bootstrap": "^0.23.3",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
